--- a/index.html
+++ b/index.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabuada Solares</title>
+    <title>Solares - Menu Principal</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Tabuada Solares</h1>
-    <img src="https://lh6.googleusercontent.com/5_iOKMcKRDvQB04oRv0S4oKlEVbEUk9gfr2bOkdXTaKsM32U25rRitQR9JYuFUncpUO18c016LkawLvXCrJT053HjprVAwWsWmbQAWw6PddlcPtvXR3ngq4pdllAv6HyrdW7GSTDg8TQROEn6w">
-    <h2>Um jeito divertido de aprender a tabuada.</h2>
+    <h1>Solares Educacional</h1>
+    <img src="https://lh6.googleusercontent.com/5_iOKMcKRDvQB04oRv0S4oKlEVbEUk9gfr2bOkdXTaKsM32U25rRitQR9JYuFUncpUO18c016LkawLvXCrJT053HjprVAwWsWmbQAWw6PddlcPtvXR3ngq4pdllAv6HyrdW7GSTDg8TQROEn6w" alt="Logo Solares">
+    
+    <h2>O que vamos aprender hoje?</h2>
 
-    <div class="numero-display">
-        Quanto é <span id="num1"></span> x <span id="num2"></span>?
+    <div class="menu-container">
+        <a href="tabuada.html" class="menu-btn">Praticar Tabuada</a>
+        <a href="quiz.html" class="menu-btn">Desafio Quiz</a>
     </div>
 
-    <!-- Container onde os 4 botões serão gerados -->
-    <div id="options-container" class="options-grid">
-    </div>
-
-    <script src="script.js"></script>
 </body>
 </html>
